RESOLVED FIXED310135
REGRESSION(309358@main): [macOS] ASSERTION FAILED: WTF::RefPtr<WebKit::WebColorPicker>::operator*() const [T = WebKit::WebColorPicker, _PtrTraits = WTF::RawPtrTraits<WebKit::WebColorPicker
https://bugs.webkit.org/show_bug.cgi?id=310135
Summary REGRESSION(309358@main): [macOS] ASSERTION FAILED: WTF::RefPtr<WebKit::WebCol...
Marta Darbinyan
Reported 2026-03-17 14:17:25 PDT
Observing flaky crashes on macOS API tests TestWebKitAPI.ColorInputTests.SetColorUsingColorPicker after 309358@main. 20:06:47.607 5662 TestWebKitAPI.ColorInputTests.SetColorUsingColorPicker 20:06:47.607 5662 2026-03-16 19:15:31.079 TestWebKitAPI[7634:3413563] NSEventConcurrentProcessingEnabled=NO 20:06:47.607 5662 ASSERTION FAILED: m_ptr 20:06:47.607 5662 /Volumes/Data/worker/Apple-Tahoe-Debug-Build/build/WebKitBuild/Debug/usr/local/include/wtf/RefPtr.h(126) : T &WTF::RefPtr<WebKit::WebColorPicker>::operator*() const [T = WebKit::WebColorPicker, _PtrTraits = WTF::RawPtrTraits<WebKit::WebColorPicker>, _RefDerefTraits = WTF::DefaultRefDerefTraits<WebKit::WebColorPicker>] 20:06:47.607 5662 1 0x14d4ae60c WTF::RefPtr<WebKit::WebColorPicker, WTF::RawPtrTraits<WebKit::WebColorPicker>, WTF::DefaultRefDerefTraits<WebKit::WebColorPicker>>::operator*() const 20:06:47.607 5662 2 0x14d39ce68 WTF::RefPtr<WebKit::WebColorPicker, WTF::RawPtrTraits<WebKit::WebColorPicker>, WTF::DefaultRefDerefTraits<WebKit::WebColorPicker>>::operator->() const 20:06:47.607 5662 3 0x14d39d050 WebKit::WebPageProxy::Internals::didChooseColor(WebCore::Color const&) 20:06:47.607 5662 4 0x14c469d3c -[WKWebView(WKTestingMac) _setSelectedColorForColorPicker:] 20:06:47.607 5662 5 0x10014a4b0 TestWebKitAPI::ColorInputTests_SetColorUsingColorPicker_Test::TestBody() 20:06:47.607 5662 6 0x1016e6200 void testing::internal::HandleSehExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 20:06:47.607 5662 7 0x1016a346c void testing::internal::HandleExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 20:06:47.608 5662 8 0x1016a33bc testing::Test::Run() 20:06:47.608 5662 9 0x1016a42ec testing::TestInfo::Run() 20:06:47.608 5662 10 0x1016a53c0 testing::TestSuite::Run() 20:06:47.608 5662 11 0x1016b315c testing::internal::UnitTestImpl::RunAllTests() 20:06:47.608 5662 12 0x1016eaeac bool testing::internal::HandleSehExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 20:06:47.608 5662 13 0x1016b2b54 bool testing::internal::HandleExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 20:06:47.608 5662 14 0x1016b2a4c testing::UnitTest::Run() 20:06:47.608 5662 15 0x10072625c RUN_ALL_TESTS() 20:06:47.608 5662 16 0x1007261f4 TestWebKitAPI::TestsController::run(int, char**) 20:06:47.608 5662 17 0x10168b960 main 20:06:47.608 5662 18 0x18415dd54 start Test history: https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.ColorInputTests.SetColorUsingColorPicker Test results: https://s3-us-west-2.amazonaws.com/archives.webkit.org/mac-tahoe-x86_64-arm64-debug-run-api-tests/309362@main-1319.txt
Attachments
Radar WebKit Bug Importer
Comment 1 2026-03-17 14:17:51 PDT
zak ridouh
Comment 2 2026-03-17 15:48:40 PDT
EWS
Comment 3 2026-03-18 16:45:50 PDT
Committed 309512@main (edd3097fc189): <https://commits.webkit.org/309512@main> Reviewed commits have been landed. Closing PR #60812 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.